[gd_scene load_steps=32 format=3 uid="uid://diltp38ph8r2c"]

[ext_resource type="Texture2D" uid="uid://kq7jwpsxpmvr" path="res://assets/Room Assets/patient area/patient area/wall type 3.png" id="1_dsvme"]
[ext_resource type="Script" uid="uid://c7mlrle53jqnn" path="res://scenes/Test_scenes/InventoryManager.gd" id="1_g3107"]
[ext_resource type="Resource" uid="uid://bmpulmhsvba3f" path="res://scenes/Test_scenes/Resources/InventoryResources/PlayerInventory.tres" id="2_3h226"]
[ext_resource type="Texture2D" uid="uid://bdrhiskqsjmp2" path="res://assets/Inventory/Inventory_Items/tape.png" id="5_d67dt"]
[ext_resource type="Texture2D" uid="uid://c0xofr5pg2ryw" path="res://assets/Testbars.png" id="6_upx3q"]
[ext_resource type="Script" uid="uid://ddh0x273qk0mi" path="res://scripts/suitcase_button.gd" id="10_668tk"]
[ext_resource type="Texture2D" uid="uid://dwhpcl8id8inf" path="res://assets/Inventory/InventoryBase_DarkBlue.PNG" id="19_avxks"]
[ext_resource type="Script" uid="uid://bxoqa3s7n2bww" path="res://scripts/inventory_container_pages.gd" id="20_itjss"]
[ext_resource type="Texture2D" uid="uid://dlysklq57y2qj" path="res://assets/Inventory/InventorySlot_DarkBlue.PNG" id="21_81vr8"]
[ext_resource type="Texture2D" uid="uid://cmfdcxhgaodh7" path="res://scenes/UI/Inventory/Assets/suitcase_icon_closed.png" id="23_44kwl"]
[ext_resource type="Texture2D" uid="uid://cjkeqow7vfu5x" path="res://assets/Inventory/InventoryArrowLeft_VibrantBlue.PNG" id="24_0xr7j"]
[ext_resource type="PackedScene" uid="uid://cyqe6argeu2wc" path="res://scenes/Test_scenes/DragZone.tscn" id="24_8m72e"]
[ext_resource type="Theme" uid="uid://begekcwlxvr52" path="res://assets/Inventory/Inventory_Theme.tres" id="24_cj0fm"]
[ext_resource type="Texture2D" uid="uid://c6oe1g4w0xipl" path="res://assets/Inventory/InventoryArrowRight_VibrantBlue.PNG" id="25_wvd73"]
[ext_resource type="PackedScene" uid="uid://cucgabq38ngxs" path="res://scenes/Test_scenes/DragArea.tscn" id="31_44kwl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qaoq3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r6jwe"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tyq2h"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_81286"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1kduu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ev18x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_krlna"]

[sub_resource type="Theme" id="Theme_i1h8l"]
HScrollBar/styles/grabber = SubResource("StyleBoxEmpty_tyq2h")
HScrollBar/styles/grabber_highlight = SubResource("StyleBoxEmpty_81286")
HScrollBar/styles/grabber_pressed = SubResource("StyleBoxEmpty_1kduu")
HScrollBar/styles/scroll = SubResource("StyleBoxEmpty_ev18x")
HScrollBar/styles/scroll_focus = SubResource("StyleBoxEmpty_krlna")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1syjl"]
texture = ExtResource("21_81vr8")

[sub_resource type="LabelSettings" id="LabelSettings_qg8o4"]
font_size = 40

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kiixm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iwx31"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_th11s"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_randn"]

[sub_resource type="ButtonGroup" id="ButtonGroup_kgbtr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ycmce"]
bg_color = Color(0.417969, 0.345212, 0.267761, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.214844, 0.136152, 0.0520325, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[node name="Inventory" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = -13.0
offset_top = -348.0
offset_right = -13.0
offset_bottom = -348.0
script = ExtResource("1_g3107")
player = ExtResource("2_3h226")

[node name="WallType3" type="Sprite2D" parent="."]
visible = false
position = Vector2(1215, 541)
texture = ExtResource("1_dsvme")

[node name="Page Inventory" type="Control" parent="."]
anchors_preset = 0
offset_top = 319.0
offset_right = 40.0
offset_bottom = 359.0

[node name="SuitcaseButton" type="Button" parent="Page Inventory"]
layout_mode = 0
offset_left = 29.0
offset_top = 6.0
offset_right = 271.0
offset_bottom = 248.0
scale = Vector2(0.719998, 0.719998)
tooltip_text = "Inventory"
theme_override_styles/focus = SubResource("StyleBoxEmpty_qaoq3")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_r6jwe")
toggle_mode = true
icon = ExtResource("23_44kwl")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("10_668tk")
metadata/_edit_use_anchors_ = true

[node name="InventoryContainer_pages" type="TextureRect" parent="Page Inventory"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = -1082.0
offset_top = -281.0
offset_right = -65.0
offset_bottom = -88.0
pivot_offset = Vector2(1209, 389)
size_flags_horizontal = 6
texture = ExtResource("19_avxks")
script = ExtResource("20_itjss")

[node name="ScrollContainer" type="ScrollContainer" parent="Page Inventory/InventoryContainer_pages"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_top = 0.289
anchor_right = 0.897
anchor_bottom = 0.81
offset_left = 105.0
offset_top = -11.777
offset_right = 29.824
offset_bottom = 8.66998
scale = Vector2(0.963629, 0.928016)
theme = SubResource("Theme_i1h8l")
horizontal_scroll_mode = 3
vertical_scroll_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Page Inventory/InventoryContainer_pages/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = -1

[node name="Slot" type="Panel" parent="Page Inventory/InventoryContainer_pages/ScrollContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_1syjl")

[node name="Item" type="TextureRect" parent="Page Inventory/InventoryContainer_pages/ScrollContainer/HBoxContainer/Slot"]
visible = false
layout_mode = 0
offset_left = 15.0
offset_top = 17.0
offset_right = 106.0
offset_bottom = 102.0
texture = ExtResource("5_d67dt")
expand_mode = 1

[node name="Label" type="Label" parent="Page Inventory/InventoryContainer_pages/ScrollContainer/HBoxContainer/Slot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "1"
label_settings = SubResource("LabelSettings_qg8o4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Slot2" type="Panel" parent="Page Inventory/InventoryContainer_pages/ScrollContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_1syjl")

[node name="DropArea" parent="Page Inventory/InventoryContainer_pages/ScrollContainer/HBoxContainer/Slot2" instance=ExtResource("24_8m72e")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 0.0
offset_right = 0.0
grow_horizontal = 2
grow_vertical = 2

[node name="Slot4" type="Panel" parent="Page Inventory/InventoryContainer_pages/ScrollContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_1syjl")

[node name="DragZone" parent="Page Inventory/InventoryContainer_pages/ScrollContainer/HBoxContainer/Slot4" instance=ExtResource("24_8m72e")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 0.0
offset_right = 0.0
grow_horizontal = 2
grow_vertical = 2

[node name="Slot3" type="Panel" parent="Page Inventory/InventoryContainer_pages/ScrollContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_1syjl")

[node name="DropArea" parent="Page Inventory/InventoryContainer_pages/ScrollContainer/HBoxContainer/Slot3" instance=ExtResource("24_8m72e")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 0.0
offset_right = 0.0
grow_horizontal = 2
grow_vertical = 2
return_type = 1

[node name="LeftArrowButton" type="Button" parent="Page Inventory/InventoryContainer_pages"]
visible = false
layout_mode = 0
offset_left = 50.0
offset_top = 55.0
offset_right = 124.0
offset_bottom = 147.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_kiixm")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_iwx31")
icon = ExtResource("24_0xr7j")
flat = true
expand_icon = true

[node name="Testbars" type="TextureRect" parent="Page Inventory/InventoryContainer_pages/LeftArrowButton"]
visible = false
layout_mode = 0
offset_left = 55.759
offset_top = -4.95016
offset_right = 83.759
offset_bottom = 80.0498
scale = Vector2(1, 1.20878)
texture = ExtResource("6_upx3q")
expand_mode = 1
stretch_mode = 1

[node name="RightArrowButton" type="Button" parent="Page Inventory/InventoryContainer_pages"]
visible = false
layout_mode = 0
offset_left = 893.0
offset_top = 55.0
offset_right = 967.0
offset_bottom = 147.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_th11s")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_randn")
icon = ExtResource("25_wvd73")
flat = true
expand_icon = true

[node name="Testbars2" type="TextureRect" parent="Page Inventory/InventoryContainer_pages/RightArrowButton"]
visible = false
layout_mode = 0
offset_left = -9.49384
offset_top = -8.73618
offset_right = 18.5062
offset_bottom = 76.2638
scale = Vector2(1, 1.20878)
texture = ExtResource("6_upx3q")
expand_mode = 1
stretch_mode = 1
flip_h = true

[node name="Dots" type="HBoxContainer" parent="Page Inventory/InventoryContainer_pages"]
visible = false
layout_mode = 0
offset_left = 405.0
offset_top = 23.6624
offset_right = 671.0
offset_bottom = 47.6624
alignment = 1

[node name="Dot1" type="CheckBox" parent="Page Inventory/InventoryContainer_pages/Dots"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("24_cj0fm")
button_pressed = true
button_group = SubResource("ButtonGroup_kgbtr")

[node name="Dot2" type="CheckBox" parent="Page Inventory/InventoryContainer_pages/Dots"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("24_cj0fm")
button_group = SubResource("ButtonGroup_kgbtr")

[node name="Dot3" type="CheckBox" parent="Page Inventory/InventoryContainer_pages/Dots"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("24_cj0fm")
button_group = SubResource("ButtonGroup_kgbtr")

[node name="Dot4" type="CheckBox" parent="Page Inventory/InventoryContainer_pages/Dots"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("24_cj0fm")
button_group = SubResource("ButtonGroup_kgbtr")

[node name="Dot5" type="CheckBox" parent="Page Inventory/InventoryContainer_pages/Dots"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("24_cj0fm")
button_group = SubResource("ButtonGroup_kgbtr")

[node name="Dot6" type="CheckBox" parent="Page Inventory/InventoryContainer_pages/Dots"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("24_cj0fm")
button_group = SubResource("ButtonGroup_kgbtr")

[node name="sub" type="Button" parent="Page Inventory/InventoryContainer_pages"]
visible = false
layout_mode = 0
offset_left = 780.836
offset_top = 184.544
offset_right = 865.836
offset_bottom = 224.544
theme_override_font_sizes/font_size = 23
text = "-1 item"

[node name="add" type="Button" parent="Page Inventory/InventoryContainer_pages"]
visible = false
layout_mode = 0
offset_left = 870.691
offset_top = 184.544
offset_right = 961.691
offset_bottom = 224.544
theme_override_font_sizes/font_size = 23
text = "+1 item"

[node name="Panel5" type="Panel" parent="Page Inventory/InventoryContainer_pages"]
layout_mode = 0
offset_left = 1289.0
offset_top = 337.0
offset_right = 1914.0
offset_bottom = 660.0
pivot_offset = Vector2(218.608, 310.732)
theme_override_styles/panel = SubResource("StyleBoxFlat_ycmce")

[node name="Drag_Inventory" parent="Page Inventory/InventoryContainer_pages/Panel5" instance=ExtResource("31_44kwl")]
unique_name_in_owner = true
layout_mode = 2
anchors_preset = 0
offset_left = 60.0
offset_top = 126.0
offset_right = -60.0
offset_bottom = -60.0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Draggable Detection" parent="Page Inventory/InventoryContainer_pages/Panel5/Drag_Inventory" index="0"]
position = Vector2(253, 37)
scale = Vector2(7.17901, 3.95941)

[node name="CollisionShape2D" parent="Page Inventory/InventoryContainer_pages/Panel5/Drag_Inventory/Draggable Detection" index="0"]
position = Vector2(0.0673828, -0.171661)
debug_color = Color(0, 0.595, 0.7, 0.360784)

[connection signal="pressed" from="Page Inventory/SuitcaseButton" to="Page Inventory/InventoryContainer_pages" method="_on_suitcase_button_pressed"]
[connection signal="pressed" from="Page Inventory/InventoryContainer_pages/LeftArrowButton" to="Page Inventory/InventoryContainer_pages" method="_on_left_arrow_button_pressed"]
[connection signal="pressed" from="Page Inventory/InventoryContainer_pages/RightArrowButton" to="Page Inventory/InventoryContainer_pages" method="_on_right_arrow_button_pressed"]
[connection signal="pressed" from="Page Inventory/InventoryContainer_pages/sub" to="Page Inventory/InventoryContainer_pages" method="_on_sub_pressed"]
[connection signal="pressed" from="Page Inventory/InventoryContainer_pages/add" to="Page Inventory/InventoryContainer_pages" method="_on_add_pressed"]

[editable path="Page Inventory/InventoryContainer_pages/Panel5/Drag_Inventory"]
